Added lightsocial_a and lightsocial_img style class elements. This fix some style related issues. Ready for 1.10 release.
git-svn-id: https://plugins.svn.wordpress.org/light-social/trunk@195015 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lightsocial.css
+++ b/lightsocial.css
@@ -12,3 +12,15 @@
 	display: inline;
 	float: left;
 }
+
+.lightsocial_a
+{
+	margin: 0px;
+	border: 0px;
+}
+
+.lightsocial_img
+{
+	margin: 0px;
+	border: 0px;
+}
